--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,12 @@
 @import './base.css';
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 #app {
   width: 100vw;
   height: 100vh;
