--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,18 @@ html {
   font-weight: normal;
 }
 
+@keyframes spring {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @media (min-width: 1024px) {
   body {
     display: flex;
