--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,29 @@ html {
   font-weight: normal;
 }
 
+.has-tooltip[data-tooltip] {
+  &:before {
+    content: attr(data-tooltip);
+    background-color: #333;
+    border-radius: 5px;
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0.2em;
+    min-width: 150%;
+    text-align: center;
+    color: #f1f1f1;
+    visibility: hidden;
+    z-index: 1;
+  }
+  &:hover {
+    &:before {
+      visibility: visible;
+    }
+  }
+}
+
 @keyframes spring {
   0% {
     transform: scale(1);
