Add chain modal component

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,57 @@ html {
   font-weight: normal;
 }
 
+.game-asset {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.small-styled-button {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: radial-gradient(circle at 50% 50%, #8aabe3 0%, #0a58df 100%);
+  border-radius: 100%;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  border: 2px solid #ddd;
+  &:hover {
+    transform: scale(1.1);
+  }
+
+}
+.styled-button {
+  display: inline-block;
+  padding: 0.5em;
+  min-width: 100px;
+  height: 50px;
+  border: 2px solid #ddd;
+  border-radius: 1em;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-in-out;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+  &:hover {
+    transform: scale(1.1);
+  }
+  &.red {
+    background: radial-gradient(circle at 50% 50%, #f29090 0%, #db0909 100%);
+  }
+  &.blue {
+    background: radial-gradient(circle at 50% 50%, #8aabe3 0%, #0a58df 100%);
+  }
+  &.green {
+    background: radial-gradient(circle at 50% 50%, #4ee26b 0%, #09a22d 100%);
+  }
+}
+
 .has-tooltip[data-tooltip] {
   &:before {
     content: attr(data-tooltip);
@@ -56,6 +107,4 @@ html {
     place-items: center;
   }
 
-  #app {
-  }
 }
