Add splash screen

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,7 +15,6 @@ input {
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
-  
   font-weight: normal;
 }
 
@@ -91,6 +90,20 @@ input {
       visibility: visible;
     }
   }
+}
+
+.modal-enter-from {
+  opacity: 0;
+}
+
+.modal-leave-to {
+  opacity: 0;
+}
+
+.modal-enter-from .add-modal,
+.modal-leave-to .add-modal {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 @keyframes spring {
